# gl-radarlib

./: .coverage  .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  Makefile  docker-compose.devcontainer.yml  docker-compose.yml  genpro25.yml  pyproject.toml  radarlib_overrides.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/genpro25/: devcontainer.json
.devcontainer/radarlib/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: Dockerfile  config.py  main.py
docs/: README.es.md  README.md  generate_pdf.sh  radarlib_EN.md  radarlib_ES.md
docs/es/: 01_introduccion.md  02_instalacion.md  03_configuracion.md  04_arquitectura_daemons.md  05_modulos_principales.md  06_guia_integracion.md  07_referencia_api.md  08_ejemplos_avanzados.md  README.md
examples/bufr/: bufr_decoding_example.py
examples/daemons/: daemon_manager_example.py  download_daemon_example.py  init_geometry_examples.py  process_single_netcdf_example.py  product_daemon_example.py  test_cog_advanced.py  test_cog_products_sync_standalone.py
examples/ftp/: README.md  ftp_checks_usage_examples.py  ftp_integration_example.py
examples/notebooks/: README.md  colormap_modification.ipynb
examples/pipelines/: fetch_bufr_and_create_netcdf_example.py
examples/radar_grid/: ppi_ring_fix_example.py  radar_grid_building_example.py  radar_grid_cog_generation_example.py  (+4 more)
scripts/: check_rma_bufr_ftp.py  profile_state_db.py
streamlit_app/: README.md  app.py  requirements.txt
tests/: Dockerfile
(+64 files in other folders)
