[tool.poetry]
name = "radarlib"
version = "0.1.0"
description = "A Python library for radars."
authors = ["Javier Guillermo Marti <jgmarti84@gmail.com>"]
license = "MIT"

# Tell Poetry where the package lives (src layout)
packages = [
  { include = "radarlib", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aioftp = "^0.22.0"
numpy = "^2.3.5"
pandas = "^2.3.3"
arm-pyart = "^2.1.1"
xarray = "^2024.0.0"
netcdf4 = "^1.7.0"
pillow = "^10.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
radar-processor = { git = "https://github.com/jgmarti84/radar-processor.git", rev = "dev/match-radarlib-vmin-vmax-cmap" }

# dev deps using the new group API
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
tox = "^3.24"
flake8 = "^6.0"
black = "^24.0"
mypy = "^1.10"

# optional: provide an extras entry so pip install -e ".[dev]" works
[tool.poetry.extras]
dev = ["pytest", "tox", "flake8", "black", "mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# Exclude vendored/legacy code (e.g. Python2 sources under bufr_resources/source_code)
exclude = '''/(
  \.eggs
 | \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | build
 | dist
 | src/radarlib/io/bufr/bufr_resources
)/'''

[tool.isort]
# Configure isort to be compatible with black
profile = "black"
line_length = 120
# Skip vendored code
skip_glob = ["src/radarlib/io/bufr/bufr_resources/*"]
